<resources>
    <string name="app_name">SplashActivityDemo</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="title_activity_guide">GuideActivity</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="whats_new_msg1">"如你所见，
微博是一种生活方式"</string>
    <string name="whats_new_title4">你可以记录每天的生活瞬间</string>
    <string name="whats_new_today">今天</string>
    <string name="whats_new_chongqing">重庆</string>
    <string name="whats_new_title7">2015年5月18日,
完成微博项目</string>
    <string name="whats_new_yesterday">昨天</string>
    <string name="whats_new_daybeforeyesterday">20</string>
    <string name="whats_new_march">11月</string>
    <string name="whats_new_title6">"在\"乐享微博\"，
你可以了解朋友们的生活"</string>
    <string name="whats_new_title7_01">乐享微博，</string>
    <string name="whats_new_title7_02">你的心声，世界的回声</string>
</resources>
